--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "frontend",
-  "version": "0.0.0",
+  "name": "H0M3ST3AD-Frontend",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
