--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "passport": "^0.4.0",
     "passport-cookie": "^1.0.4",
     "passport-jwt": "^3.0.1",
-    "path": "^0.12.7",
+    "path": "^0.12.7"
   }
 }
