--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "A versatile platform for hosting home automation projects.",
   "main": "homestead.js",
   "scripts": {
-    "start": "nodejs homestead.js"
+    "start": "nodejs server.js",
+    "generate-docs": "node_modules/.bin/jsdoc --configure ./config/jsdoc.json --verbose"
   },
   "author": "Jeremy Mallette",
   "license": "ISC",
@@ -15,6 +16,8 @@
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "ink-docstrap": "^1.3.2",
+    "jsdoc": "^3.5.5",
     "jsonwebtoken": "^8.1.0",
     "kerberos": "0.0.23",
     "mongodb": "^2.2.33",
