--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
-    "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "ink-docstrap": "^1.3.2",
@@ -24,8 +23,10 @@
     "mongoose": "^4.13.7",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
-    "passport-cookie": "^1.0.4",
     "passport-jwt": "^3.0.1",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1"
   }
 }
