Fixing the non-existant build...

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,6 @@ jobs:
       before_install:
         - sudo apt-get update -qq
         - npm install -g gulp-cli
-        - npm install -g angular-cli
       install:
         - npm install
       script: skip
@@ -55,6 +54,8 @@ jobs:
       install: true
       env:
         - NODE_ENV=production
+      before_script:
+        - npm install -g @angular/cli
       script:
         - cd frontend/
         - ng build
