Fixing the non-existant build...

--- a/.travis.yml
+++ b/.travis.yml
@@ -57,9 +57,8 @@ jobs:
       before_script:
         - npm install -g @angular/cli
       script:
-        - cd frontend/
-        - ng build
-      # WIP
+        - cd frontend && ng build
+        # WIP !!!
 
 # NOTIFICATIONS ################################################################
 notifications:
