--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@angular/cli": "1.6.3",
     "@angular/compiler-cli": "^5.2.3",
     "@angular/language-service": "^5.2.3",
+    "@angular-devkit/core": "*",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^6.0.97",
