--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-imagemin": "^4.1.0",
     "gulp-sass": "^3.1.0"
