--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,28 @@
+## Marked
 *~
 
+## Git Root
 .git
 
+## Dependencies
 node_modules
-data
+
+## Compiled Output
+docs
 public
-docs/*
+
+## IDEs and Editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+## IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
