--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
+#################
+## !!! WIP !!! ##
+#################
+
 # SETUP ########################################################################
 sudo: true
 env:
