--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,14 +1,11 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
-# compiled output
-/dist
+## Compiled Output
 /tmp
 /out-tsc
 
-# dependencies
+## Dependencies
 /node_modules
 
-# IDEs and editors
+## IDEs and Editors
 /.idea
 .project
 .classpath
@@ -24,7 +21,7 @@
 !.vscode/launch.json
 !.vscode/extensions.json
 
-# misc
+# Misc
 /.sass-cache
 /connect.lock
 /coverage
